trunk/Archive2/be/7d8255a434e7f1/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:3:32: error: class template partial specialization does not specialize any template argument; to define the primary template, remove the template argument list
template<class... Args> struct run<Args...>
                               ^  ~~~~~~~~~
1 error generated.
g++ (GCC) 4.9.2
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:3:32: error: partial specialization 'run<Args ...>' does not specialize any template arguments
 template<class... Args> struct run<Args...>
                                ^
